feat: started work on About me section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,18 @@
                     <h1>Port<br>folio</h1>
                     <h2>Anna Makarova</h2>
             </div>
-
+        </div>
+    </section>
+    <section class="about">
+        <div class="about-container">
+            <div class="left-content">
+                <h4>| About me</h4>
+                <h2>Hello, </h2>
+                <h2>I'm Anna Makarova</h2>
+            </div>
+            <div class="right-content">
+                <img src="/image/IMG_2123B.png">
+            </div>
         </div>
     </section>
 </head>
