Added text to About me section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Skills</a></li>
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -32,7 +32,7 @@
     <section class="home">
         <div class="banner-container">
                 <h4>Front end developer</h4>
-                <h3>2023'</h3>
+                <!-- <h3>2023'</h3> -->
                 <div class="title-box">
                     <h1>Port<br>folio</h1>
                     <h2>Anna Makarova</h2>
@@ -45,6 +45,18 @@
                 <h4>| About me</h4>
                 <h2>Hello, </h2>
                 <h2>I'm Anna Makarova</h2>
+                <p>I'm a <strong>Junior Front-end developer</strong>.</p>
+                <p><strong>My skills: </strong>Typescript, JavaScript, React, Styled-Components, Bootstrap, Material UI,
+                    HTML, CSS, Git, GitHub, Jira.</p>
+                    <p>
+                    I have experience of working in a team on a project, working with someone else's
+                    code, updating libraries and fixing bugs. Now looking for a job like front-end
+                    developer, web developer.
+                </p>
+                <p>                  
+                    Best regards,<br>
+                    Anna Makarova.</p>
+
             </div>
             <div class="right-content">
                 <img src="/image/IMG_2123B.png">
