--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="home">
         <div class="banner-container">
                 <h4>Front end developer</h4>
-                <!-- <h3>2023'</h3> -->
+                <h3>2022'</h3>
                 <div class="title-box">
                     <h1>Port<br>folio</h1>
                     <h2>Anna Makarova</h2>
@@ -43,20 +43,16 @@
         <div class="about-container">
             <div class="left-content">
                 <h4>| About me</h4>
-                <h2>Hello, </h2>
+                <h2 class="hello">Hello, </h2>
                 <h2>I'm Anna Makarova</h2>
-                <p>I'm a <strong>Junior Front-end developer</strong>.</p>
+                <!-- <h4>A Front-end developer</h4> -->
                 <p><strong>My skills: </strong>Typescript, JavaScript, React, Styled-Components, Bootstrap, Material UI,
                     HTML, CSS, Git, GitHub, Jira.</p>
-                    <p>
-                    I have experience of working in a team on a project, working with someone else's
+                <p>
+                    I have 1 year experience of working in a team on a project, working with someone else's
                     code, updating libraries and fixing bugs. Now looking for a job like front-end
                     developer, web developer.
                 </p>
-                <p>                  
-                    Best regards,<br>
-                    Anna Makarova.</p>
-
             </div>
             <div class="right-content">
                 <img src="/image/IMG_2123B.png">
