Added Skills and Contact sections

--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@
         <div class="about-container">
             <div class="left-content">
                 <h4>| About me</h4>
-                <h2 class="hello">Hello, </h2>
+                <h2 class="yellow-title">Hello, </h2>
                 <h2>I'm Anna Makarova</h2>
                 <!-- <h4>A Front-end developer</h4> -->
-                <p><strong>My skills: </strong>Typescript, JavaScript, React, Styled-Components, Bootstrap, Material UI,
-                    HTML, CSS, Git, GitHub, Jira.</p>
                 <p>
                     I have 1 year experience of working in a team on a project, working with someone else's
                     code, updating libraries and fixing bugs. Now looking for a job like front-end
@@ -59,8 +57,25 @@
             </div>
         </div>
     </section>
+    <section class="skills">
+        <div class="skills-container">
+            <h4>| Skills</h4>
+            <h2 class="yellow-title">My skills: </h2>
+            <p>React, Typescript, JavaScript, Redux, Styled-Components, Bootstrap, Material UI,
+                HTML, CSS, Git, GitHub, Jira.</p>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="contact-container">
+            <h4>| Contact info</h4>
+            <button>LinkedIn</button>
+            <button>GitHub</button>
+            <p>Phone number:</p>
+            <p>+48792042593</p>
+        </div>
+    </section>
 </head>
 <body>
-    
+    <script src="script.js"></script>    
 </body>
 </html>
