--- a/index.html
+++ b/index.html
@@ -79,18 +79,20 @@
                     <img src="/image/bootstrap-logo.png">
                     <img src="/image/logo_material-ui.png">
                 </div>
-                
             </div>
             
         </div>
     </section>
     <section class="section contact" id="contact">
         <div class="contact-container">
+            <div class="left-content">
             <h4>| Contact info</h4>
             <a href="https://www.linkedin.com/in/anna-makarova-537468230/" target="_blank">LinkedIn</a>
             <a href="https://github.com/Anya556" target="_blank">GitHub</a>
             <p>Phone number:</p>
             <p>+48792042593</p>
+            <button id="openCv">View CV</button>
+        </div>
         </div>
     </section>
     <script src="script.js"></script> 
