Started working on the Project's section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -81,6 +81,16 @@
                 </div>
             </div>
             
+        </div>
+    </section>
+    <section class="section projects" id="projects">
+        <div class="projects-container">
+            <div class="left-content">
+                <h4>| Projects</h4>
+                <h2 class="yellow-title">My projects: </h2>
+                <p>Coins App with paginated queries. Tech stack: React Query | Axios</p>
+            </div>
+            <div class ="right-content"></div>
         </div>
     </section>
     <section class="section contact" id="contact">
